2008-02-04  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac:
    * plugins/Makefile.am:
    * plugins/mosaic/Makefile.am:
    * plugins/mosaic/ccm-mosaic.c:
    * plugins/mosaic/ccm-mosaic.h:
    * plugins/mosaic/ccm-mosaic.plugin.desktop.in:
    * plugins/mosaic/ccm-mosaic.schemas.in: First implementation of mosaic 
                                            plugin.
    
    * src/ccm-pixmap-buffered-shm.c: Fix redraw when disable/enable buffering
                                     pixmap.
                                     
    * src/ccm.h:
    * src/ccm-screen.c: Add ccm_screen_set_filtered_damage which provide the 
                        possibility to disable/enable the refresh of obscured
                        area of window.
                        
    * src/ccm.h:
    * src/ccm-window.c: Add ccm_window_make_input_output function.
    
2008-02-02  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c: Remove refresh rate check on paint
    
2008-01-31  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/magnifier/ccm-magnifier.c:
    * src/ccm-pixmap-buffered-shm.c:
    * src/ccm-window.c: Fix offset of clipping when drawing in magnifier surface
                        Clip screen when drawing shade desktop.
                        Fix unset buffered pixmap in window paint.

2008-01-28  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac: Nicolas stop beer :) isn't --enable-glitz-ftp but 
                    --enable-glitz-tfp
    * plugins/magnifier/ccm-magnifier.c: Hide pointer when magnifier is active

2008-01-28  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac: add --enable-glitz-tfp option
    * plugins/magnifier/ccm-magnifier.schemas.in: 
    * plugins/magnifier/ccm-magnifier.c: Add shade desktop gconf options, fix 
                                         move on border

2008-01-28  Nicolas Bruguier  <gandalfn@club-internet.fr>
